$Id$

History for IMDBPHP
===================

v1.2.4
-------------------
! imdb::releaseInfo() did not recognize entries without day - fixed.
! imdb_person::born() and died() have been broken by IMDB changes again - fixed
! imdb::color() has been broken by IMDB changes - also fixed. Same for
  imdb:sound(), mpaa() and mpaa_hist()

v1.2.3 (14.02.2010)
-------------------
! imdb::plotoutline() did not cut surrounding DIV (backport from trunk)
! imdb::alsoknow() fixed (IMDB site changes - backport from trunk)
* imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
* imdb::releaseInfo() now catches a few more cases (missing links)
! IMDB Search did not work with the localized sites due to new domains used
! imdb_person::filmograf did not catch characters if they had no link. Due
  to changes on the IMDB sites, it in fact did no longer catch any character...
! imdb_person: born() and died() missed to return the year due to IMDB site changes
! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates

v1.2.2 (26.11.2009)
-------------------
! fixed an backport error (PHP5 style declaration)
! fixed runtimes() again (the IMDB guys are playing with us), and fixed mpaa_reason (both backports from trunk)
! imdb_person::filmograf() was broken due to an inserted onClick() on IMDB.COM (backport from trunk)
! fixed the imdb::trailers() method. Note that IMDB now only lists their own
  videos, so the imdb_trailers class is (currently) useless.
- removed the imdb_trailers class from checks. As IMDB seems to no longer
  list external trailers, they will either fail. The code for the class will
  remain in the repository for now - one never knows...
+ added new method imdb::keywords_all() (to retrieve the full list)

v1.2.1 (15.11.2009)
-------------------
! version info was not updated in the base class
! imdb: minor fix for releaseInfo()
! imdb::language() was broken
+ imdb::creator() method backported from trunk